--- a/rslu/members.html
+++ b/rslu/members.html
@@ -465,7 +465,7 @@
                      alt="通用的占位符缩略图" width="180px" height="240px">
                 <div class="caption">
                     <h3>C</h3>
-                    <p>Some sample text.</p>
+                    <p>Some sample text.</p>1
                 </div>
               </a>
             </div>
